applications/main/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
  namespace: main
  labels:
    app.kubernetes.io/name: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: main
  template:
    metadata:
      labels:
        app.kubernetes.io/name: main
    spec:
      containers:
        - name: main
          image: ghcr.io/nicodm13/k8s-ansible-project/main:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
