applications/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main
  namespace: main
  labels:
    app.kubernetes.io/name: main
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: main
  ports:
    - name: http
      port: 80
      targetPort: http
